Fixing navbar z-index css

--- a/themes/bobu-three-tier-menu-theme/docroot/_diffs/css/custom2.css
+++ b/themes/bobu-three-tier-menu-theme/docroot/_diffs/css/custom2.css
@@ -4,7 +4,7 @@
 
 #navigation {
 	background: #804B12;
-	z-index: 1000;
+	z-index: 1;
 }
 
 #navigation ul {
